--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "babel-preset-env": "^1.1.8",
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
+    "react-mfb": "^0.4.1",
+    "react-tap-event-plugin": "^1.0.0",
     "webpack": "^1.14.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack-dev-server --progress --colors"
   },
   "repository": {
     "type": "git",
